style: move toolbar adjustments to SCSS only

--- a/BlogposterCMS/public/assets/scss/components/_text-editor-toolbar.scss
+++ b/BlogposterCMS/public/assets/scss/components/_text-editor-toolbar.scss
@@ -21,6 +21,10 @@
 
   &.floating {
     position: absolute;
+    top: auto;
+    left: 0;
+    transform: none;
+    width: auto;
   }
 
   .tb-btn {
