feat: add collapsible admin pages menu

--- a/BlogposterCMS/public/plainspace/partials/content-header-pages.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header-pages.html
@@ -4,5 +4,6 @@
   </div>
   <div class="content-header-right">
     <img id="edit-toggle" src="/assets/icons/edit.svg" class="icon" alt="Edit layout" />
+    <img id="pages-menu-toggle" src="/assets/icons/sidebar.svg" class="icon" alt="Toggle pages menu" />
   </div>
 </div>
