--- a/BlogposterCMS/public/assets/scss/_global.scss
+++ b/BlogposterCMS/public/assets/scss/_global.scss
@@ -21,6 +21,26 @@ body {
   -ms-user-select: none;
 }
 
+.widget-container.loading {
+  opacity: 0;
+}
+
+.widget-placeholder {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  color: var(--color-text);
+  background: var(--color-secondary-light);
+  opacity: 0.6;
+}
+
+.canvas-item.loading {
+  background: var(--color-secondary-light);
+}
+
     /* Canvas grid relies on content-box sizing. Reset inside its container */
 
 
